# atmosense-abcgan

./: .gitattributes  .gitignore  .readthedocs.yml  CHANGES.md  LICENSE.txt  MANIFEST.in  README.md  VERSION  _config.yml  index.md  requirements.txt  setup.cfg  setup.py
binder/: requirements.txt
docs/: abcgan.rst  conf.py  index.rst  modules.rst
docs/_static/: README
docs/source/: conf.py  index.rst  installation.rst
models/: wgan_gp_v7.json  wgan_gp_v7.pt
src/abcgan/: __init__.py  anomaly.py  attention.py  bv_model.py  constants.py  evaluate.py  hfp_model.py  interface.py  mask.py  mean_estimation.py  model.py  persist.py  tec_model.py  transforms.py
src/abcgan/models/: bv_gan.json  bv_lidar_gan.json  bv_lidar_gan.pt  dr_gan.json  dr_gan.pt  hfp_gan.json  hfp_gan.pt  mm_gan_radar.json  wgan_gp_lidar.json  wgan_gp_lidar.pt  wtec_cgan_LSTIDs_MtMoses.json  wtec_cgan_LSTIDs_MtMoses.pt  wtec_cgan_LSTIDs_PFRR.json  wtec_cgan_LSTIDs_PFRR.pt  wtec_cgan_MSTIDs_MtMoses.json  wtec_cgan_MSTIDs_MtMoses.pt  wtec_cgan_MSTIDs_PFRR.json  wtec_cgan_MSTIDs_PFRR.pt  wtec_cgan_SSTIDs_ColoradoKCFO.json  wtec_cgan_SSTIDs_ColoradoKCFO.pt  wtec_cgan_SSTIDs_HoustonTxSS.json  wtec_cgan_SSTIDs_HoustonTxSS.pt  wtec_cgan_SSTIDs_MidlandTxSS.json  wtec_cgan_SSTIDs_MidlandTxSS.pt  wtec_cgan_SSTIDs_NMexicoSPA.json  wtec_cgan_SSTIDs_NMexicoSPA.pt  wtec_cgan_SSTIDs_OklahomaCSM.json  wtec_cgan_SSTIDs_OklahomaCSM.pt  wtec_cgan_SSTIDs_PFRR.json  wtec_cgan_SSTIDs_PFRR.pt  wtec_cgan_SSTIDs_SouthWest.json  wtec_cgan_SSTIDs_SouthWest.pt  wtec_cgan_TSTIDs_ColoradoKCFO.json  wtec_cgan_TSTIDs_ColoradoKCFO.pt  wtec_cgan_TSTIDs_HoustonTxSS.json  wtec_cgan_TSTIDs_HoustonTxSS.pt  wtec_cgan_TSTIDs_MidlandTxSS.json  wtec_cgan_TSTIDs_MidlandTxSS.pt  wtec_cgan_TSTIDs_NMexicoSPA.json  wtec_cgan_TSTIDs_NMexicoSPA.pt  (+45 more)
tests/: test_anomaly.py  test_attention.py  test_bv_model.py  test_evaluate.py  test_hfp_model.py  test_interface.py  test_mean_estimation.py  test_model.py  test_persist.py  test_tec_model.py  test_transforms.py
tutorials/: GeophysIndices.ipynb  demo.ipynb  plotting_utils.py  requirements.txt  tec_demo.ipynb  wtec_LSTIDs_MtMoses.h5  wtec_LSTIDs_Poker.h5  wtec_MSTIDs_MtMoses.h5  wtec_MSTIDs_Poker.h5  wtec_SSTIDs_Poker.h5  wtec_tutorial.h5
