[metadata]
name = abcgan
version = 0.0.1
author = Andrew Silberfarb
author_email = andrew.silberfarb@sri.com
description = tools for generation of sythetic atmospheric data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sri-geospace/atmosense-abcgan
project_urls =
    Bug Tracker = https://github.com/sri-geospace/atmosense-abcgan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = abcgan
python_requires = >=3.8
install_requires =
    torch>=1.8
    numpy
    h5py
    typing
