[metadata]
name = abcgan
version = file: VERSION 
license = MIT 

authors = SRI International 
author_email = andrew.silberfarb@sri.com

description = Generator and Discriminator for Atmosense Background Characterization
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/sri-geospace/atmosense-abcgan
project_urls =
    Bug Tracker = https://github.com/sri-geospace/atmosense-abcgan/issues

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = abcgan

python_requires = >=3.8

install_requires =
    scipy>=1.2
    numpy
    torch
    pandas>=0.24.0
    h5py

